--- a/src/pages/testing.astro
+++ b/src/pages/testing.astro
@@ -6,6 +6,10 @@ import ExtendedFab from "../components/actions/extended-fab.astro";
 import Fab from "../components/actions/fab.astro";
 import IconButton from '../components/actions/icon-button.astro';
 import SegmentedButton from '../components/actions/segmented-button.astro';
+import Progress from "../components/communication/progress.astro";
+import Snackbar from "../components/communication/snackbar.astro";
+import Tooltip from "../components/communication/tooltip.astro";
+import Badge from "../components/communication/badge.astro";
 ---
 
 <Styles hex="#4B21BD" />
