Add containment components

--- a/src/components/actions/extended-fab.astro
+++ b/src/components/actions/extended-fab.astro
@@ -31,7 +31,7 @@ const { onclick = "", icon = undefined } = Astro.props
 	}
 
 	button:hover {
-        box-shadow: rgba(0, 0, 0, 0.15) 0 1px 8px;
+        box-shadow: rgba(0, 0, 0, 0.15) 0 6px 8px 4px;
 	}
 
 	button:hover::after {
