--- a/src/pages/testing.astro
+++ b/src/pages/testing.astro
@@ -10,6 +10,12 @@ import Progress from "../components/communication/progress.astro";
 import Snackbar from "../components/communication/snackbar.astro";
 import Tooltip from "../components/communication/tooltip.astro";
 import Badge from "../components/communication/badge.astro";
+import BottomSheet from '../components/containment/bottom-sheet.astro';
+import Card from "../components/containment/card.astro";
+import Dialog from "../components/containment/dialog.astro";
+import Divider from "../components/containment/divider.astro";
+import ListItem from "../components/containment/list-item.astro";
+import SideSheet from '../components/containment/side-sheet.astro';
 ---
 
 <Styles hex="#4B21BD" />
