--- a/src/components/actions/button.astro
+++ b/src/components/actions/button.astro
@@ -4,8 +4,9 @@ interface Props {
 	type: 'elevated' | 'filled' | 'tonal' | 'outlined' | 'text',
 	onclick?: string,
 	icon?: string | undefined,
+	slot?: string | undefined
 }
-const { type, onclick = "", icon = undefined } = Astro.props
+const { type, onclick = "", icon = undefined, slot } = Astro.props
 
 let padding
 if (!!icon) {
@@ -22,7 +23,7 @@ if (type == 'text' && !icon) {
 const colorDecoder = {'elevated': 'var(--md-color-primary)', 'filled': 'var(--md-color-on-primary)', 'tonal': 'var(--md-color-on-secondary-container', 'outlined': 'var(--md-color-primary)', 'text': 'var(--md-color-primary)'};
 ---
 
-<button onclick={onclick} class={`${type} md-shape-corner-full ${type == 'elevated' && 'md-elevation-1'} md-typescale-label-large md-motion-easing-emphasized md-motion-duration-short4`}>{!!icon && <Icon size="18" color={colorDecoder[type]} weight="500">{icon}</Icon>}<slot /></button>
+<button slot={slot} onclick={onclick} class={`${type} md-shape-corner-full ${type == 'elevated' && 'md-elevation-1'} md-typescale-label-large md-motion-easing-emphasized md-motion-duration-short4`}>{!!icon && <Icon size="18" color={colorDecoder[type]} weight="500">{icon}</Icon>}<slot /></button>
 
 <style define:vars={{padding}}>
 	.elevated {
@@ -52,7 +53,7 @@ const colorDecoder = {'elevated': 'var(--md-color-primary)', 'filled': 'var(--md
 	}
 
     .elevated:hover {
-        box-shadow: rgba(0, 0, 0, 0.25) 0 1px 3px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0 2.25px 3px 1.5px;
     }
 
     .elevated:hover::after {
@@ -85,7 +86,7 @@ const colorDecoder = {'elevated': 'var(--md-color-primary)', 'filled': 'var(--md
     }
 
     .filled:hover {
-        box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px;
+        box-shadow: rgba(0, 0, 0, 0.3) 0 0.75px 1px 0.5px;
     }
 
     .filled:hover::after {
@@ -132,7 +133,7 @@ const colorDecoder = {'elevated': 'var(--md-color-primary)', 'filled': 'var(--md
     }
 
     .tonal:hover {
-        box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px;
+        box-shadow: rgba(0, 0, 0, 0.3) 0 0.75px 1px 0.5px;
     }
 
     .tonal:hover::after {
