--- a/src/components/actions/fab.astro
+++ b/src/components/actions/fab.astro
@@ -43,7 +43,7 @@ const { type = 'fab', onclick = "" } = Astro.props
     }
 
 	button:hover {
-        box-shadow: rgba(0, 0, 0, 0.15) 0 1px 8px;
+        box-shadow: rgba(0, 0, 0, 0.15) 0 6px 8px 4px;
 	}
 
 	button:hover::after {
