--- a/src/components/icon.astro
+++ b/src/components/icon.astro
@@ -6,17 +6,18 @@ interface Props {
 	grade?: string,
 	size?: string,
 	style?: 'outlined' | 'rounded' | 'sharp',
-	clearance?: string
+	clearance?: string,
+	slot?: string
 }
 
-const { color = '#000000', fill = '0', weight = '400', grade = '0', size = '24px', style = "outlined", clearance = '0' } = Astro.props
+const { color = '#000000', fill = '0', weight = '400', grade = '0', size = '24px', style = "outlined", clearance = '0', slot } = Astro.props
 const materialClass = `material-symbols-${style}`
 const fillNum = parseInt(fill)
 const weightNum = parseInt(weight)
 const gradeNum = parseInt(grade)
 ---
 
-<span class={materialClass}><slot /></span>
+<span class={materialClass} slot={slot}><slot /></span>
 
 <style define:vars={{ fillNum, weightNum, gradeNum, size, color, clearance }}>
     @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";
