--- a/src/components/styles.astro
+++ b/src/components/styles.astro
@@ -47,7 +47,7 @@ const mdSurfaceContainerLow = hexFromArgb(neutral.getHct(96).toInt())
 const mdSurfaceContainerLowest = hexFromArgb(neutral.getHct(100).toInt())
 const mdInverseSurface = hexFromArgb(neutral.getHct(20).toInt())
 const mdInverseOnSurface = hexFromArgb(neutral.getHct(95).toInt())
-const mdSurfaceTint = `${hexFromArgb(primary.getHct(40).toInt())}04`
+const mdSurfaceTint = `${hexFromArgb(primary.getHct(40).toInt())}0C`
 
 const mdOutline = hexFromArgb(neutralVariant.getHct(50).toInt())
 const mdOutlineVariant = hexFromArgb(neutralVariant.getHct(80).toInt())
@@ -95,23 +95,23 @@ const styles = `
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 
 	.md-elevation-5 {
-		box-shadow: rgba(0, 0, 0, 0.1) 0 1px 12px;
+		box-shadow: rgba(0, 0, 0, 0.1) 0 8px 12px 6px;
 	}
 
     .md-elevation-4 {
-        box-shadow: rgba(0, 0, 0, 0.15) 0 1px 8px;
+        box-shadow: rgba(0, 0, 0, 0.15) 0 6px 8px 4px;
     }
 
     .md-elevation-3 {
-        box-shadow: rgba(0, 0, 0, 0.2) 0 1px 6px;
+        box-shadow: rgba(0, 0, 0, 0.2) 0 4.5px 6px 3px;
     }
 
     .md-elevation-2 {
-        box-shadow: rgba(0, 0, 0, 0.25) 0 1px 3px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0 2.25px 3px 1.5px;
     }
 
     .md-elevation-1 {
-        box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px;
+        box-shadow: rgba(0, 0, 0, 0.3) 0 0.75px 1px 0.5px;
     }
 
 	.md-motion-easing-emphasized {
@@ -223,7 +223,7 @@ const styles = `
 	}
 
     .md-shape-corner-extra-large-top {
-        border-radius: 28px 0;
+        border-radius: 28px 28px 0 0;
     }
 
     .md-shape-corner-extra-large {
