--- a/src/pages/testing.astro
+++ b/src/pages/testing.astro
@@ -16,6 +16,14 @@ import Dialog from "../components/containment/dialog.astro";
 import Divider from "../components/containment/divider.astro";
 import ListItem from "../components/containment/list-item.astro";
 import SideSheet from '../components/containment/side-sheet.astro';
+import BottomAppBar from '../components/navigation/bottom-app-bar.astro';
+import NavBar from '../components/navigation/navigation-bar.astro';
+import NavDrawer from '../components/navigation/navigation-drawer.astro';
+import NavRail from '../components/navigation/navigation-rail.astro';
+import SearchBar from '../components/navigation/search-bar.astro';
+import Tabs from "../components/navigation/tabs.astro";
+import Tab from "../components/navigation/tab.astro";
+import TopBar from "../components/navigation/top-bar.astro"
 ---
 
 <Styles hex="#4B21BD" />
