--- a/src/components/actions/fab.astro
+++ b/src/components/actions/fab.astro
@@ -3,13 +3,14 @@ import Icon from "../icon.astro";
 import Styles from "../styles.astro";
 interface Props {
 	type?: 'fab' | 'small' | 'large',
-	onclick?: string
+	onclick?: string,
+	slot?: string,
 }
 
-const { type = 'fab', onclick = "" } = Astro.props
+const { type = 'fab', onclick = "", slot } = Astro.props
 ---
 
-<button onclick={onclick} class:list={[type, 'md-shape-corner-large', 'md-elevation-3']}><Icon size={type == 'fab' || type == 'small' ? '24px' : '36px'} color="var(--md-color-on-primary-container)"><slot /></Icon></button>
+<button slot={slot} onclick={onclick} class:list={[type, 'md-shape-corner-large', 'md-elevation-3']}><Icon size={type == 'fab' || type == 'small' ? '24px' : '36px'} color="var(--md-color-on-primary-container)"><slot /></Icon></button>
 
 <style>
 	.fab {
