--- a/src/components/actions/icon-button.astro
+++ b/src/components/actions/icon-button.astro
@@ -6,10 +6,11 @@ interface Props {
 	selectable?: boolean,
 	onclick?: string,
 	color?: string | undefined,
-	id?: string
+	id?: string,
+    slot?: string
 }
 
-const { type = 'standard', selectable = false, onclick = '', color, id = 'tooltipIdentification' } = Astro.props
+const { type = 'standard', selectable = false, onclick = '', color, id = 'tooltipIdentification', slot } = Astro.props
 
 if (type != 'standard' && color) {
 	throw new Error(`Color cannot be specified when type is ${type}, the type must be standard.`)
@@ -18,7 +19,7 @@ if (type != 'standard' && color) {
 const colorDecoder = {'standard': color ? color : "var(--md-color-on-surface-primary)", 'filled': "var(--md-color-primary)", 'tonal': "var(--md-color-on-surface-variant)", 'outlined': "var(--md-color-on-surface-variant)"}
 ---
 
-<button id={id} class:list={[type, 'md-shape-corner-full']} onclick={onclick}><Icon size='24px' color={colorDecoder[type]}><slot /></Icon></button>
+<button slot={slot} id={id} class:list={[type, 'md-shape-corner-full']} onclick={onclick}><Icon size='24px' color={colorDecoder[type]}><slot /></Icon></button>
 <Tooltip type="rich" onclick="alert('the button works')" target={id}>
     <Fragment slot="subhead">Rich tooltip</Fragment>
     Rich tooltips bring attention to a particular element or feature that warrants the user's focus.
