Add selection components

--- a/src/components/actions/icon-button.astro
+++ b/src/components/actions/icon-button.astro
@@ -7,10 +7,12 @@ interface Props {
 	onclick?: string,
 	color?: string | undefined,
 	id?: string,
-    slot?: string
+    slot?: string,
+    className?: string,
+    size?: string,
 }
 
-const { type = 'standard', selectable = false, onclick = '', color, id = 'tooltipIdentification', slot } = Astro.props
+const { type = 'standard', selectable = false, onclick = '', color, id = 'tooltipIdentification', slot, className, size } = Astro.props
 
 if (type != 'standard' && color) {
 	throw new Error(`Color cannot be specified when type is ${type}, the type must be standard.`)
@@ -19,7 +21,7 @@ if (type != 'standard' && color) {
 const colorDecoder = {'standard': color ? color : "var(--md-color-on-surface-primary)", 'filled': "var(--md-color-primary)", 'tonal': "var(--md-color-on-surface-variant)", 'outlined': "var(--md-color-on-surface-variant)"}
 ---
 
-<button slot={slot} id={id} class:list={[type, 'md-shape-corner-full']} onclick={onclick}><Icon size='24px' color={colorDecoder[type]}><slot /></Icon></button>
+<button slot={slot} id={id} class:list={[type, 'md-shape-corner-full', className]} onclick={onclick}><Icon size={size ? size : '24px'} color={colorDecoder[type]}><slot /></Icon></button>
 <Tooltip type="rich" onclick="alert('the button works')" target={id}>
     <Fragment slot="subhead">Rich tooltip</Fragment>
     Rich tooltips bring attention to a particular element or feature that warrants the user's focus.
