--- a/src/pages/testing.astro
+++ b/src/pages/testing.astro
@@ -24,6 +24,17 @@ import SearchBar from '../components/navigation/search-bar.astro';
 import Tabs from "../components/navigation/tabs.astro";
 import Tab from "../components/navigation/tab.astro";
 import TopBar from "../components/navigation/top-bar.astro"
+import Checkbox from "../components/selection/checkbox.astro";
+import Chip from "../components/selection/chip.astro";
+import DatePicker from "../components/selection/date-picker.astro"
+import Menu from "../components/selection/menu.astro";
+import Radio from "../components/selection/radio.astro";
+import Slider from "../components/selection/slider.astro";
+import Switch from "../components/selection/switch.astro";
+import TimePicker from "../components/selection/time-picker.astro"
+import TextField from "../components/selection/text-field.astro";
 ---
+
+<TimePicker></TimePicker>
 
 <Styles hex="#4B21BD" />
