--- a/src/components/containment/dialog.astro
+++ b/src/components/containment/dialog.astro
@@ -3,23 +3,24 @@ import Icon from "../icon.astro";
 import IconButton from "../actions/icon-button.astro";
 interface props {
 	type?: 'basic' | 'full',
-	id?: string
+	id?: string,
+	className?: string,
+	slot?: string,
+	style?: string
 }
 
-const { type = 'basic', id } = Astro.props
+const { type = 'basic', id, className, slot, style } = Astro.props
 
 // to open (replace 100% with 0 to close): document.querySelector('#test').style.height = '100%'
 ---
 
-{type == 'basic' && <div class="scrim md-motion-easing-emphasized md-motion-duration-long2" id={id}><div class:list={['basic', 'md-elevation-3', 'md-shape-corner-extra-large']}>
+{type == 'basic' ? <div class:list={["scrim md-motion-easing-emphasized md-motion-duration-long2", className]} id={id} slot={slot} style={style}><div class:list={['basic', 'md-elevation-3', 'md-shape-corner-extra-large']}>
 	<Icon size="24px" color="var(--md-color-secondary)"><slot name="icon" /></Icon>
 	<p class="md-typescale-headline-small" style="color: var(--md-color-on-surface); margin: 8px 0 16px 0;"><slot name="headline" /></p>
 	<p class="md-typescale-body-medium" style="color: var(--md-color-on-surface-variant); margin: 0 0 24px 0;"><slot name="supporting" /></p>
 	<slot />
 	<div style="display: flex; flex-direction: row; width: 100%; justify-content: end;"><slot name="buttons" /></div>
-</div></div>}
-
-{type == 'full' && <div class="container md-motion-easing-emphasized md-motion-duration-extra-long4" id={id}>
+</div></div> : <div class:list={["container md-motion-easing-emphasized md-motion-duration-extra-long4", className]} id={id} slot={slot} style={style}>
 	<header>
 		<IconButton color="var(--md-color-on-surface)" onclick="document.querySelector('#test').style.height = '0';">close</IconButton>
 		<p class="md-typescale-title-large" style="width: 100%; padding-left: 16px;"><slot name="headline" /></p>
