--- a/src/components/navigation/tab.astro
+++ b/src/components/navigation/tab.astro
@@ -1,12 +1,15 @@
 ---
 interface props {
 	style?: string,
+	id?: string,
+	className?: string,
+	slot?: string
 }
 
-const { style } = Astro.props
+const { style, id, className, slot } = Astro.props
 ---
 
-<div class="md-motion-easing-emphasized md-motion-duration-extra-long4 tab" style={style}>
+<div class:list={["md-motion-easing-emphasized md-motion-duration-extra-long4 tab", className]} style={style} id={id} slot={slot}>
 	<slot />
 </div>
 
