--- a/src/components/selection/switch.astro
+++ b/src/components/selection/switch.astro
@@ -1,13 +1,17 @@
 ---
 import Icon from "../icon.astro";
 interface Props {
-	state?: 'selected' | 'unselected'
+	state?: 'selected' | 'unselected',
+	id?: string,
+	className?: string,
+	slot?: string,
+	style?: string
 }
 
-const { state = 'unselected' } = Astro.props
+const { state = 'unselected', id, className, style, slot } = Astro.props
 ---
 
-<label class="switch">
+<label class:list={["switch", className]} id={id} style={style} slot={slot}>
 	<input type="checkbox" checked={state == 'selected'} />
 	<span class="track md-motion-easing-emphasized md-motion-duration-short4 md-shape-corner-full"></span>
 </label>
